@@ -23,6 +23,8 @@ Release 2.7.0 - UNRELEASED
     tests such as truncate with HA setup, negative tests, truncate with other
     operations and multiple truncates.  (szetszwo)
 
+    HDFS-7058. Tests for truncate CLI. (Dasha Boudnik via shv)
+
   OPTIMIZATIONS
 
   BUG FIXES
